Some gentle refactoring.